@@ -1,24 +1,101 @@
 package com.action.camera.social.domain;
 
+import jakarta.persistence.CascadeType;
+import jakarta.persistence.CollectionTable;
+import jakarta.persistence.Column;
+import jakarta.persistence.ElementCollection;
+import jakarta.persistence.Entity;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
+import jakarta.persistence.FetchType;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.OneToMany;
+import jakarta.persistence.OrderBy;
+import jakarta.persistence.OrderColumn;
+import jakarta.persistence.PrePersist;
+import jakarta.persistence.PreUpdate;
+import jakarta.persistence.Table;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
+@Getter
+@Setter
+@NoArgsConstructor
+@Entity
+@Table(name = "moment_posts")
 public class MomentPost {
 
-    private final Long id;
-    private final Long authorId;
-    private final String authorRole;
-    private final String title;
-    private final String content;
-    private final String imageData;
-    private final List<String> mentions;
-    private final LocalDateTime createdAt;
-    private final Set<Long> likedUserIds = new LinkedHashSet<>();
-    private final Set<Long> favoritedUserIds = new LinkedHashSet<>();
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @Column(name = "author_id", nullable = false)
+    private Long authorId;
+
+    @Column(name = "author_role", nullable = false, length = 20)
+    private String authorRole;
+
+    @Column(name = "title", length = 50)
+    private String title;
+
+    @Column(name = "content", length = 1000)
+    private String content;
+
+    @Enumerated(EnumType.STRING)
+    @Column(name = "status", nullable = false, length = 20)
+    private MomentStatus status = MomentStatus.PUBLISHED;
+
+    @OneToMany(mappedBy = "moment", cascade = CascadeType.ALL, orphanRemoval = true)
+    @OrderBy("sortOrder ASC, id ASC")
+    private List<MomentImage> images = new ArrayList<>();
+
+    @ElementCollection(fetch = FetchType.LAZY)
+    @CollectionTable(name = "moment_mentions", joinColumns = @JoinColumn(name = "moment_id"))
+    @Column(name = "mention", length = 100)
+    @OrderColumn(name = "sort_order")
+    private List<String> mentions = new ArrayList<>();
+
+    @ElementCollection(fetch = FetchType.LAZY)
+    @CollectionTable(name = "moment_likes", joinColumns = @JoinColumn(name = "moment_id"))
+    @Column(name = "user_id", nullable = false)
+    private Set<Long> likedUserIds = new LinkedHashSet<>();
+
+    @ElementCollection(fetch = FetchType.LAZY)
+    @CollectionTable(name = "moment_favorites", joinColumns = @JoinColumn(name = "moment_id"))
+    @Column(name = "user_id", nullable = false)
+    private Set<Long> favoritedUserIds = new LinkedHashSet<>();
+
+    @Column(name = "created_at", nullable = false, updatable = false)
+    private LocalDateTime createdAt;
+
+    @Column(name = "updated_at", nullable = false)
+    private LocalDateTime updatedAt;
+
+    @Column(name = "deleted_at")
+    private LocalDateTime deletedAt;
+
+    public MomentPost(Long authorId, String authorRole, String title, String content,
+                      List<String> mentions, List<String> imageDataList) {
+        this.authorId = authorId;
+        this.authorRole = authorRole;
+        this.title = title;
+        this.content = content;
+        replaceMentions(mentions);
+        replaceImages(imageDataList);
+    }
 
     public MomentPost(Long id, Long authorId, String authorRole, String title, String content,
                       String imageData, List<String> mentions, LocalDateTime createdAt) {
@@ -27,11 +104,84 @@ public class MomentPost {
         this.authorRole = authorRole;
         this.title = title;
         this.content = content;
-        this.imageData = imageData;
-        this.mentions = mentions == null
-                ? Collections.emptyList()
-                : Collections.unmodifiableList(new ArrayList<>(mentions));
+        replaceMentions(mentions);
+        replaceImages(imageData == null ? Collections.emptyList() : List.of(imageData));
         this.createdAt = createdAt;
+        this.updatedAt = createdAt;
+    }
+
+    @PrePersist
+    void prePersist() {
+        LocalDateTime now = LocalDateTime.now();
+        if (createdAt == null) {
+            createdAt = now;
+        }
+        if (updatedAt == null) {
+            updatedAt = now;
+        }
+        if (status == null) {
+            status = MomentStatus.PUBLISHED;
+        }
+    }
+
+    @PreUpdate
+    void preUpdate() {
+        updatedAt = LocalDateTime.now();
+        if (status == null) {
+            status = MomentStatus.PUBLISHED;
+        }
+    }
+
+    public void replaceMentions(List<String> sourceMentions) {
+        mentions.clear();
+        if (sourceMentions == null) {
+            return;
+        }
+        for (String mention : sourceMentions) {
+            if (mention == null) {
+                continue;
+            }
+            String normalized = mention.trim();
+            if (!normalized.isBlank() && !mentions.contains(normalized)) {
+                mentions.add(normalized);
+            }
+        }
+    }
+
+    public void replaceImages(List<String> sourceImages) {
+        images.clear();
+        if (sourceImages == null) {
+            return;
+        }
+        int sortOrder = 0;
+        for (String imageData : sourceImages) {
+            if (imageData == null) {
+                continue;
+            }
+            String normalized = imageData.trim();
+            if (normalized.isBlank()) {
+                continue;
+            }
+            images.add(new MomentImage(this, normalized, sortOrder, sortOrder == 0));
+            sortOrder++;
+        }
+    }
+
+    public void updateDraft(String title, String content, List<String> mentions, List<String> imageDataList) {
+        this.title = title;
+        this.content = content;
+        if (mentions != null) {
+            replaceMentions(mentions);
+        }
+        if (imageDataList != null) {
+            replaceImages(imageDataList);
+        }
+    }
+
+    public void markDeleted() {
+        status = MomentStatus.DELETED;
+        deletedAt = LocalDateTime.now();
+        updatedAt = deletedAt;
     }
 
     public void toggleLike(Long userId) {
@@ -42,12 +192,28 @@ public class MomentPost {
         }
     }
 
+    public boolean addLike(Long userId) {
+        return likedUserIds.add(userId);
+    }
+
+    public boolean removeLike(Long userId) {
+        return likedUserIds.remove(userId);
+    }
+
     public void toggleFavorite(Long userId) {
         if (favoritedUserIds.contains(userId)) {
             favoritedUserIds.remove(userId);
         } else {
             favoritedUserIds.add(userId);
         }
+    }
+
+    public boolean addFavorite(Long userId) {
+        return favoritedUserIds.add(userId);
+    }
+
+    public boolean removeFavorite(Long userId) {
+        return favoritedUserIds.remove(userId);
     }
 
     public boolean likedBy(Long userId) {
@@ -58,43 +224,31 @@ public class MomentPost {
         return favoritedUserIds.contains(userId);
     }
 
-    public Long getId() {
-        return id;
-    }
-
-    public Long getAuthorId() {
-        return authorId;
-    }
-
-    public String getAuthorRole() {
-        return authorRole;
-    }
-
-    public String getTitle() {
-        return title;
-    }
-
-    public String getContent() {
-        return content;
-    }
-
-    public String getImageData() {
-        return imageData;
-    }
-
-    public List<String> getMentions() {
-        return mentions;
-    }
-
-    public LocalDateTime getCreatedAt() {
-        return createdAt;
-    }
-
     public int getLikeCount() {
         return likedUserIds.size();
     }
 
     public int getFavoriteCount() {
         return favoritedUserIds.size();
+    }
+
+    public boolean isPublished() {
+        return MomentStatus.PUBLISHED.equals(status);
+    }
+
+    public boolean isDeleted() {
+        return MomentStatus.DELETED.equals(status);
+    }
+
+    public String getImageData() {
+        return images.isEmpty() ? null : images.get(0).getImageData();
+    }
+
+    public List<String> getImageDataList() {
+        return images.stream()
+                .sorted(Comparator.comparing(MomentImage::getSortOrder)
+                        .thenComparing(MomentImage::getId, Comparator.nullsLast(Comparator.naturalOrder())))
+                .map(MomentImage::getImageData)
+                .collect(Collectors.toUnmodifiableList());
     }
 }
